Update index.html with portfolio information

--- a/index.html
+++ b/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Webpage</title>
+  <title>Krishnamoorthi G's Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
-  <h1>Hello, World!</h1>
-  <p>This is a simple webpage.</p>
+<header>
+  <h1>Krishnamoorthi G's Portfolio</h1>
+</header>
+
+<div class="container">
+  <section id="about">
+    <h2>🚀 About Me</h2>
+    <p>Hi there! 👋 I'm Krishnamoorthi G, a passionate 3rd-year BE AIML student with a keen interest in artificial intelligence, machine learning, and software development. Here, you'll find a collection of my projects, experiments, and contributions.</p>
+    <ul>
+      <li>🎓 Currently pursuing BE in Artificial Intelligence and Machine Learning.</li>
+      <li>🌱 Learning and exploring the latest tools and technologies in AI and ML.</li>
+      <li>💼 Interested in AI-powered tool development and building intelligent systems.</li>
+      <li>👯 Looking to collaborate on open-source projects and innovative AI/ML applications.</li>
+      <li>💬 Ask me about AI, ML, Git, GitHub, or anything tech-related!</li>
+      <li>📫 Reach out to me via <a href="https://linkedin.com/in/gkrishna247">LinkedIn</a> or <a href="mailto:krishnamoorthitech2224@gmail.com">Email</a>.</li>
+    </ul>
+  </section>
+
+  <hr>
+
+  <section id="skills">
+    <h2>🛠️ Skills & Tools</h2>
+    <ul>
+      <li><strong>Programming Languages:</strong> Python, C, Java</li>
+      <li><strong>Machine Learning Frameworks:</strong> TensorFlow, Scikit-Learn</li>
+      <li><strong>Web Development:</strong> HTML, CSS, JavaScript</li>
+      <li><strong>Tools & Platforms:</strong> Git, GitHub, Linux</li>
+      <li><strong>Data Science:</strong> Pandas, NumPy, Matplotlib</li>
+    </ul>
+  </section>
+
+  <hr>
+
+  <section id="projects">
+    <h2>📂 Projects</h2>
+    <ul>
+      <li><strong>Project 1:</strong> Description of project 1.</li>
+      <li><strong>Project 2:</strong> Description of project 2.</li>
+      <li><strong>Project 3:</strong> Description of project 3.</li>
+    </ul>
+  </section>
+
+  <hr>
+
+  <section id="contact">
+    <h2>📫 Contact</h2>
+    <p>Feel free to reach out to me via <a href="https://linkedin.com/in/gkrishna247">LinkedIn</a> or <a href="mailto:krishnamoorthitech2224@gmail.com">Email</a>.</p>
+  </section>
+</div>
+
+<footer>
+  <p>&copy; 2023 Krishnamoorthi G</p>
+</footer>
 
 </body>
 </html>
