Add JavaScript functionality for hamburger menu and project appearance on scroll

--- a/index.html
+++ b/index.html
@@ -1,65 +1,115 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Krishnamoorthi G's Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Krishnamoorthi G's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header id="main-header">
+        <nav>
+            <h1>Krishnamoorthi G</h1>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <button id="hamburger" class="hamburger">⚌</button>
+        </nav>
+    </header>
 
-<header>
-  <h1>Krishnamoorthi G's Portfolio</h1>
-</header>
+    <section id="about" class="section">
+        <div class="container">
+            <div class="section-title">
+                <h2>About Me</h2>
+                <span class="underline"></span>
+            </div>
+            <div class="about-content">
+                <p>Hi there! 👋 I'm Krishnamoorthi G, a passionate 3rd-year BE AIML student interested in AI, ML, and software development. I'm eager to learn and contribute to innovative projects.</p>
+                <ul>
+                    <li>Currently pursuing BE in Artificial Intelligence and Machine Learning.</li>
+                    <li>Learning and exploring new technologies in AI/ML.</li>
+                    <li>Interested in AI-powered tools and intelligent systems.</li>
+                    <li>Open to collaborating on open-source and AI/ML projects.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
-<div class="container">
-  <section id="about">
-    <h2>🚀 About Me</h2>
-    <p>Hi there! 👋 I'm Krishnamoorthi G, a passionate 3rd-year BE AIML student with a keen interest in artificial intelligence, machine learning, and software development. Here, you'll find a collection of my projects, experiments, and contributions.</p>
-    <ul>
-      <li>🎓 Currently pursuing BE in Artificial Intelligence and Machine Learning.</li>
-      <li>🌱 Learning and exploring the latest tools and technologies in AI and ML.</li>
-      <li>💼 Interested in AI-powered tool development and building intelligent systems.</li>
-      <li>👯 Looking to collaborate on open-source projects and innovative AI/ML applications.</li>
-      <li>💬 Ask me about AI, ML, Git, GitHub, or anything tech-related!</li>
-      <li>📫 Reach out to me via <a href="https://linkedin.com/in/gkrishna247">LinkedIn</a> or <a href="mailto:krishnamoorthitech2224@gmail.com">Email</a>.</li>
-    </ul>
-  </section>
+    <section id="skills" class="section">
+        <div class="container">
+            <div class="section-title">
+                <h2>Skills</h2>
+                <span class="underline"></span>
+            </div>
+            <div class="skills-content">
+                <div class="skills-grid">
+                    <div class="skill">Python</div>
+                    <div class="skill">Java</div>
+                    <div class="skill">C</div>
+                    <div class="skill">JavaScript</div>
+                    <div class="skill">HTML</div>
+                    <div class="skill">CSS</div>
+                    <div class="skill">TensorFlow</div>
+                    <div class="skill">Scikit-learn</div>
+                    <div class="skill">Pandas</div>
+                    <div class="skill">NumPy</div>
+                    <div class="skill">Git</div>
+                    <div class="skill">GitHub</div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <hr>
+    <section id="projects" class="section">
+        <div class="container">
+           <div class="section-title">
+               <h2>Projects</h2>
+               <span class="underline"></span> 
+           </div>
+            <div class="projects-content">
+                <div class="project">
+                    <h3>Project Title 1</h3>
+                    <p>Brief description of project 1 and its key features/technologies used. <a href="#" target="_blank">Live Demo/GitHub</a></p>
+                </div>
+                <div class="project">
+                    <h3>Project Title 2</h3>
+                    <p>Concise description of project 2 highlighting achievements and skills applied. <a href="#" target="_blank">Live Demo/GitHub</a></p>
+                </div>
+                </div>
+           </div>
+    </section>
 
-  <section id="skills">
-    <h2>🛠️ Skills & Tools</h2>
-    <ul>
-      <li><strong>Programming Languages:</strong> Python, C, Java</li>
-      <li><strong>Machine Learning Frameworks:</strong> TensorFlow, Scikit-Learn</li>
-      <li><strong>Web Development:</strong> HTML, CSS, JavaScript</li>
-      <li><strong>Tools & Platforms:</strong> Git, GitHub, Linux</li>
-      <li><strong>Data Science:</strong> Pandas, NumPy, Matplotlib</li>
-    </ul>
-  </section>
 
-  <hr>
 
-  <section id="projects">
-    <h2>📂 Projects</h2>
-    <ul>
-      <li><strong>Project 1:</strong> Description of project 1.</li>
-      <li><strong>Project 2:</strong> Description of project 2.</li>
-      <li><strong>Project 3:</strong> Description of project 3.</li>
-    </ul>
-  </section>
+    <section id="contact" class="section">
+        <div class="container">
+            <div class="section-title">
+                <h2>Contact Me</h2>
+                <span class="underline"></span>
+            </div>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <div class="social-icons">
+                        <a href="https://linkedin.com/in/gkrishna247" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:krishnamoorthitech2224@gmail.com"><i class="fas fa-envelope"></i></a>
+                    </div>
+                   <div> (Your Phone Number) </div>
+                 </div>
+            </div>
+        </div>
+    </section>
 
-  <hr>
+    <footer>
+        <div class="container">
+            <p>© 2023 Krishnamoorthi G. All rights reserved.</p>
+        </div>
+    </footer>
 
-  <section id="contact">
-    <h2>📫 Contact</h2>
-    <p>Feel free to reach out to me via <a href="https://linkedin.com/in/gkrishna247">LinkedIn</a> or <a href="mailto:krishnamoorthitech2224@gmail.com">Email</a>.</p>
-  </section>
-</div>
-
-<footer>
-  <p>&copy; 2023 Krishnamoorthi G</p>
-</footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
