Refactor index.html for improved structure and content clarity

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header id="main-header">
         <nav>
@@ -28,7 +30,7 @@
                 <h2>About Me</h2>
                 <span class="underline"></span>
             </div>
-            <div class="about-content">
+            <div class="about-content"></div>
                 <p>Hi there! 👋 I'm Krishnamoorthi G, a passionate 3rd-year BE AIML student interested in AI, ML, and software development. I'm eager to learn and contribute to innovative projects.</p>
                 <ul>
                     <li>Currently pursuing BE in Artificial Intelligence and Machine Learning.</li>
@@ -67,10 +69,10 @@
 
     <section id="projects" class="section">
         <div class="container">
-           <div class="section-title">
-               <h2>Projects</h2>
-               <span class="underline"></span> 
-           </div>
+            <div class="section-title">
+                <h2>Projects</h2>
+                <span class="underline"></span>
+            </div>
             <div class="projects-content">
                 <div class="project">
                     <h3>Project Title 1</h3>
@@ -80,11 +82,9 @@
                     <h3>Project Title 2</h3>
                     <p>Concise description of project 2 highlighting achievements and skills applied. <a href="#" target="_blank">Live Demo/GitHub</a></p>
                 </div>
-                </div>
-           </div>
+            </div>
+        </div>
     </section>
-
-
 
     <section id="contact" class="section">
         <div class="container">
@@ -98,8 +98,8 @@
                         <a href="https://linkedin.com/in/gkrishna247" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="mailto:krishnamoorthitech2224@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
-                   <div> (Your Phone Number) </div>
-                 </div>
+                    <div>+1-234-567-8901</div> <!-- Replace with your actual phone number -->
+                </div>
             </div>
         </div>
     </section>
@@ -112,4 +112,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
